--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "flowbite": "^2.2.1",
     "nanoid": "^3.3.6",
     "node-cron": "^3.0.3",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
